♻️: refactored invoice